# Regularized-Kelvinlets

./: CMakeLists.txt  README.md
cmake/: FindPolyscope.cmake
src/: main.cpp  regularized_kelvinlets.h  regularized_kelvinlets_driver.h
